# Graphics

./: .gitignore  CMakeLists.txt
cmake/: dependencies.cmake
data/: CUVNAK.json  citric_acid.json  guanine.json
examples/: CMakeLists.txt  CylinderImpostors.cpp  Molecules.cpp  SphereImpostors.cpp  SphereImpostorsInstanced.cpp  logpile.cpp.disabled  patches_example.cpp  patches_palette_example.cpp  triangles.cpp
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  RGBColor.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  cylinders.cpp  cylinders.hpp  patch_shader_quad4.cpp  patch_shader_quad8.cpp  patch_shader_quad9.cpp  patch_shader_tri6.cpp  patches.cpp  patches.hpp  rgbcolor.hpp  spheres.cpp  spheres.hpp  triangles.cpp  triangles.hpp  vertex.hpp
src/imgui/: progress_bar.hpp
src/misc/: binary_io.hpp  heap_array.hpp  iterator.hpp  macros.hpp  parallel_for.hpp  timer.hpp
tests/: CMakeLists.txt
